--- a/article.css
+++ b/article.css
@@ -1,4 +1,12 @@
+/* ROOT */
+:root {
+  /* layout */
+  --banner-height: 340px;
+  --article-width: 754px;
+}
+
 /* global */
+h1,
 h3,
 p {
   margin: 0;
@@ -10,12 +18,51 @@ p {
 }
 
 /* article banner */
+.article-banner {
+  position: relative;
+}
 
+.article-banner__container {
+  height: var(--banner-height);
+}
 
+.article-banner__container::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.65)
+}
+
+.article-banner__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.article-banner__title {
+  color: #FFF;
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+
+  height: var(--banner-height);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 40px;
+
+  position: absolute;
+  top: 0;
+}
 
 /* article */
 .article {
-  max-width: 794px;
+  width: calc(var(--article-width) + 40px);
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
