--- a/article.css
+++ b/article.css
@@ -68,6 +68,14 @@ p {
   margin: 0 auto;
 }
 
+.article :nth-child(n+2) {
+  padding-bottom: 20px;
+}
+
+.article :last-child {
+  padding-bottom: 0;
+}
+
 .article__title {
   font-size: 20px;
   font-weight: 700;
@@ -81,18 +89,14 @@ p {
   font-weight: 400;
   opacity: 60%;
 
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
 }
 
 .article__text {
   font-size: 18px;
   font-weight: 400;
 
-  padding-bottom: 20px;
-}
-
-.article :last-child {
-  padding-bottom: 0;
+  /* padding-bottom: 20px; */
 }
 
 .article__text--bold {
@@ -113,5 +117,5 @@ p {
 
 .article__video {
   display: block;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
 }
