--- a/article.css
+++ b/article.css
@@ -40,6 +40,7 @@ p {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center center;
 }
 
 .article-banner__title {
@@ -68,11 +69,11 @@ p {
   margin: 0 auto;
 }
 
-.article :nth-child(n+2) {
+.article p {
   padding-bottom: 20px;
 }
 
-.article :last-child {
+.article p:last-child {
   padding-bottom: 0;
 }
 
@@ -88,15 +89,11 @@ p {
   font-size: 16px;
   font-weight: 400;
   opacity: 60%;
-
-  /* padding-bottom: 20px; */
 }
 
 .article__text {
   font-size: 18px;
   font-weight: 400;
-
-  /* padding-bottom: 20px; */
 }
 
 .article__text--bold {
@@ -117,5 +114,20 @@ p {
 
 .article__video {
   display: block;
-  /* padding-bottom: 20px; */
+}
+
+.article__container-img {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.article__img {
+  max-width: 367px;
+  max-height: 367px;
+
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
