--- a/article.css
+++ b/article.css
@@ -71,20 +71,12 @@ ol {
   margin: 0 auto;
 }
 
-.article p, li {
+.article p {
   padding-bottom: 20px;
 }
 
 .article p:last-child {
   padding-bottom: 0;
-}
-
-.article ol {
-  padding-left: 15px;
-}
-
-.article li::marker {
-  font-weight: 500;
 }
 
 .article__title {
@@ -140,4 +132,16 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.article li {
+  padding-bottom: 20px;
+}
+
+.article ol {
+  padding-left: 15px;
+}
+
+.article li::marker {
+  font-weight: 500;
 }
