--- a/article.css
+++ b/article.css
@@ -71,7 +71,8 @@ ol {
   margin: 0 auto;
 }
 
-.article p {
+.article p,
+.article li {
   padding-bottom: 20px;
 }
 
@@ -132,10 +133,6 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.article li {
-  padding-bottom: 20px;
 }
 
 .article ol {
