--- a/styles/article.css
+++ b/styles/article.css
@@ -127,11 +127,9 @@ ol {
 }
 
 .article__img {
-  max-width: 367px;
-  max-height: 367px;
+  width: 367px;
+  height: 367px;
 
-  width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
