--- a/styles/style.css
+++ b/styles/style.css
@@ -122,9 +122,13 @@ header {
 
 
 /* slider */
+.slider {
+  padding: 60px 0;
+}
+
 .slider__list {
   margin: 0;
-  padding: 60px 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -139,7 +143,7 @@ header {
 
   display: flex;
   justify-content: center;
-  padding-bottom: 60px;
+  padding-top: 60px;
 }
 
 .slider-block {
