--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
   --color-brand-hover-button: #FF8C46;
   /* font */
   --font-family: "Raleway";
+  --font-size: 20px;
   /* layout */
   --header-height: 80px;
   --footer-height: 88px;
