--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
   /* font */
   --font-family: "Raleway";
   --font-size: 20px;
+  --font-weight: 400;
   /* layout */
   --header-height: 80px;
   --footer-height: 88px;
@@ -24,6 +25,7 @@ body {
   margin: 0;
   font-family: var(--font-family);
   font-size: var(--font-size);
+  font-weight: var(--font-weight);
   color: var(--color-black);
 }
 
@@ -37,11 +39,29 @@ a {
 
 /* layout */
 .container{
-
   max-width: 1180px;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
+}
+
+.page-section--pd60 {
+  padding: 60px 0;
+}
+
+.page-section--pd80 {
+  padding: 80px 0;
+}
+
+.page-section--grey {
+  background-color: #F4F4F4;
+}
+
+/* for text */
+.title {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 /* button */
@@ -123,16 +143,11 @@ header {
 
 
 /* slider */
-.slider {
-  padding: 60px 0;
-}
-
 .slider__list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
 
 .slider__nav.swiper-pagination-bullets {
   --swiper-theme-color: var(--color-brand);
@@ -156,15 +171,10 @@ header {
 
 .slider-block__title {
   margin-bottom: 20px;
-  font-size: 40px;
-  font-weight: 700;
-  text-transform: uppercase;
 }
 
 .slider-block p {
   margin: 0;
-  font-size: 20px;
-  font-weight: 400;
 }
 
 .slider-block__button {
@@ -200,7 +210,6 @@ header {
   display: flex;
   column-gap: 25px;
   font-size: 16px;
-  font-weight: 400;
 
   padding-right: 282px;
 }
@@ -234,7 +243,6 @@ header {
 .page-footer__text {
   color: #999;
   font-size: 14px;
-  font-weight: 400;
 }
 
 .contact-img {
