--- a/styles/style.css
+++ b/styles/style.css
@@ -257,7 +257,7 @@ header {
 /* project + card */
 .card {
   width: 367px;
-  height: 616px;
+  min-height: 620px;
   padding: 24px;
   background-color: #fff;
 
@@ -268,11 +268,12 @@ header {
 }
 
 .card__button {
-  width: 270px;
+  margin-top: 40px;
+  width: 80%;
 }
 
 .card__img {
-  width: 320px;
+  width: 100%;
   height: 320px;
   overflow: hidden;
 }
@@ -332,6 +333,14 @@ header {
 
 
 /* card slider */
+.swiper-wrapper {
+  align-items: stretch;
+}
+
+.swiper-slide {
+  height: auto;
+}
+
 .project__list {
   margin: 0;
   padding: 0;
