--- a/styles/style.css
+++ b/styles/style.css
@@ -33,10 +33,6 @@ a {
   color: var(--color-brand);
 }
 
-a:hover {
-  color: var(--color-brand-hover);
-}
-
 h2,
 h3,
 p {
@@ -511,14 +507,14 @@ header {
 }
 
 /* contact */
-.contact-img {
+.page-footer__contact-icon {
   opacity: 75%;
   display: block;
 
   transition: all 0.3s ease;
 }
 
-.contact-img:hover {
+.page-footer__contact-icon:hover {
   opacity: 100%;
 }
 /* END footer */
