--- a/styles/article.css
+++ b/styles/article.css
@@ -113,3 +113,26 @@ ol {
 .article li::marker {
   font-weight: 500;
 }
+
+/* vacancy */
+.vacancy__block {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(2, auto);
+  column-gap: 20px;
+  row-gap: 40px;
+}
+
+.vacancy__inner-block:nth-child(1) {
+  grid-column: span 7;
+  grid-row: span 2;
+}
+
+.vacancy__inner-block:nth-child(2) {
+  grid-column: 9 / 13;
+}
+
+.vacancy__inner-block:nth-child(3) {
+  grid-column: 9 / 13;
+  grid-row-start: 2;
+}
