--- a/styles/media.css
+++ b/styles/media.css
@@ -71,7 +71,7 @@
   .slider-block__img {
     order: -1;
     width: 50%;
-    height: 492px;
+    height: auto;
   }
 
   .slider__nav.swiper-pagination-bullets {
@@ -132,7 +132,8 @@
 
 @media screen and (max-width: 768px) {
   .slider-block__img {
-    height: 50%;
+    width: 75%;
+    height: auto;
   }
 
   .about__img {
@@ -180,6 +181,15 @@
 }
 
 @media screen and (max-width: 460px) {
+  .slider-block__img {
+    width: 100%;
+    height: auto;
+  }
+
+  .page-footer__row {
+    justify-content: center;
+  }
+
   .page-footer__contact {
     display: none;
   }
