--- a/styles/media.css
+++ b/styles/media.css
@@ -128,6 +128,15 @@
   .form__textarea {
     font-size: 16px;
   }
+
+  /* article */
+  .article__title {
+    font-size: 20px;
+  }
+
+  .article__text {
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -192,5 +201,14 @@
 
   .page-footer__contact {
     display: none;
+  }
+
+  /* article */
+  :root {
+    --banner-height: 260px
+  }
+
+  .article-banner__title {
+    font-size: 24px;
   }
 }
