--- a/styles/media.css
+++ b/styles/media.css
@@ -137,6 +137,80 @@
   .article__text {
     font-size: 16px;
   }
+
+  /* vacancy */
+  .vacancy {
+    font-size: 16px;
+  }
+
+  .vacancy .title {
+    font-size: 24px;
+  }
+
+  .vacancy__inner-title {
+    font-size: 20px;
+  }
+
+  .vacancy__inner-block-title {
+    font-size: 18px;
+  }
+
+  .vacancy__inner-block:nth-child(1) {
+    grid-column: 1 / 13;
+    grid-row-start: 1;
+  }
+  
+  .vacancy__inner-block:nth-child(2) {
+    grid-column: 1 / 13;
+    grid-row-start: 2;
+  }
+  
+  .vacancy__inner-block:nth-child(3) {
+    grid-column: 1 / 13;
+    grid-row-start: 3;
+  }
+
+  /* news */
+  .subscribe {
+    padding: 40px 10px;
+  }
+
+  .subscribe img {
+    display: none;
+  }
+
+  .subscribe__text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .news-block {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .news-block img {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .news-block__text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .news-block__date {
+    display: none;
+  }
+
+  .email-block {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 768px) {
