--- a/styles/NewsStyle.css
+++ b/styles/NewsStyle.css
@@ -19,6 +19,17 @@
   text-transform: uppercase;
 }
   
+.news-block__title a {
+  color: var(--color-black);
+  text-decoration: none;
+
+  transition: all 0.3s ease;
+}
+
+.news-block__title a:hover {
+  color: var(--color-brand);
+}
+
 .news-block__button {
   margin-top: 30px;
 }
